...
  <string name="a11y_voice_message_record">"Record voice message."</string>
  <string name="a11y_voice_message_stop_recording">"Stop recording"</string>
  <string name="a11y_your_avatar">"Your avatar"</string>
  <string name="action_accept">"Accept"</string>
  <string name="action_add_caption">"Add caption"</string>
  <string name="action_add_to_timeline">"Add to timeline"</string>
  <string name="action_back">"Back"</string>
  <string name="action_call">"Call"</string>
  <string name="action_cancel">"Cancel"</string>
  <string name="action_cancel_for_now">"Cancel for now"</string>
  <string name="action_choose_photo">"Choose photo"</string>
  <string name="action_clear">"Clear"</string>
  <string name="action_close">"Close"</string>
...
  <string name="action_continue">"Continue"</string>
  <string name="action_copy">"Copy"</string>
  <string name="action_copy_caption">"Copy caption"</string>
  <string name="action_copy_link">"Copy link"</string>
  <string name="action_copy_link_to_message">"Copy link to message"</string>
  <string name="action_copy_text">"Copy text"</string>
  <string name="action_create">"Create"</string>
  <string name="action_create_a_room">"Create a channel"</string>
  <string name="action_deactivate">"Deactivate"</string>
  <string name="action_deactivate_account">"Deactivate account"</string>
  <string name="action_decline">"Decline"</string>
  <string name="action_decline_and_block">"Decline and block"</string>
  <string name="action_delete_poll">"Delete Poll"</string>
...
  <string name="action_edit">"Edit"</string>
  <string name="action_edit_caption">"Edit caption"</string>
  <string name="action_edit_poll">"Edit poll"</string>
  <string name="action_enable">"Enable"</string>
  <string name="action_end_poll">"End poll"</string>
  <string name="action_enter_pin">"Enter PIN"</string>
  <string name="action_finish">"Finish"</string>
  <string name="action_forgot_password">"Forgot password?"</string>
  <string name="action_forward">"Forward"</string>
  <string name="action_go_back">"Go back"</string>
  <string name="action_go_to_roles_and_permissions">"Go to roles &amp; permissions"</string>
  <string name="action_go_to_settings">"Go to settings"</string>
  <string name="action_ignore">"Ignore"</string>
  <string name="action_invite">"Invite"</string>
  <string name="action_invite_friends">"Invite Others"</string>
  <string name="action_invite_friends_to_app">"Invite colleagues to %1$s"</string>
  <string name="action_invite_people_to_app">"Invite colleagues to %1$s"</string>
  <string name="action_invites_list">"Invites"</string>
  <string name="action_join">"Join"</string>
  <string name="action_learn_more">"Learn more"</string>
  <string name="action_leave">"Leave"</string>
  <string name="action_leave_conversation">"Leave conversation"</string>
  <string name="action_leave_room">"Leave channel"</string>
  <string name="action_leave_space">"Leave space"</string>
  <string name="action_load_more">"Load more"</string>
  <string name="action_manage_account">"Manage account"</string>
  <string name="action_manage_devices">"Manage devices"</string>
...
  <string name="common_no_space_name">"No space name"</string>
  <string name="common_not_encrypted">"Not encrypted"</string>
  <string name="common_offline">"Offline"</string>
  <string name="common_open_source_licenses">"Open source licenses"</string>
  <string name="common_or">"or"</string>
  <string name="common_password">"Password"</string>
  <string name="common_people">"People"</string>
  <string name="common_permalink">"Permalink"</string>
  <string name="common_permission">"Permission"</string>
  <string name="common_pinned">"Pinned"</string>
  <string name="common_please_check_internet_connection">"Please check your internet connection"</string>
  <string name="common_please_wait">"Please wait…"</string>
  <string name="common_poll_end_confirmation">"Are you sure you want to end this poll?"</string>
...
  <string name="common_report_a_bug">"Report a bug"</string>
  <string name="common_report_a_problem">"Report a problem"</string>
  <string name="common_report_submitted">"Report submitted"</string>
  <string name="common_rich_text_editor">"Rich text editor"</string>
  <string name="common_room">"Channel"</string>
  <string name="common_room_name">"Channel name"</string>
  <string name="common_room_name_placeholder">"e.g. sales team"</string>
  <plurals name="common_rooms">
    <item quantity="one">"%1$d Channel"</item>
    <item quantity="other">"%1$d Channels"</item>
  </plurals>
  <string name="common_saved_changes">"Saved changes"</string>
  <string name="common_saving">"Saving"</string>
  <string name="common_screen_lock">"Screen lock"</string>
  <string name="common_search_for_someone">"Search for someone"</string>
  <string name="common_search_results">"Search results"</string>
  <string name="common_security">"Security"</string>
  <string name="common_seen_by">"Seen by"</string>
  <string name="common_select_account">"Select an account"</string>
  <string name="common_send_to">"Send to"</string>
  <string name="common_sending">"Sending…"</string>
...
